# instibot

./: .editorconfig  .gitignore  README.md  mypy.ini  pyproject.toml
instibot/tg/: request.py  response.py
instibot/views/: base.py  carousel.py  form.py
