[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "instibot"
author = "Daniil Kondratev"
author-email = "dankondr@icloud.com"
home-page = "https://github.com/dankondr/instibot"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Internet",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires = [
    "aiogram",
    "peewee"
]
description-file = "README.md"
requires-python = ">=3.9"

[tool.flit.metadata.requires-extra]
test = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "factory-boy"
]

[tool.black]
target-version = ["py38"]
skip-string-normalization = true
line_length = 88

[tool.isort]
profile = "black"
known_third_party = ["aiogram"]